# unifi2netbox-plugins

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  main.py  netbox-plugin.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-tag.yml  ci.yml  publish-python-package.yml  release.yml
deploy/netbox-docker/: README.md  docker-compose.override.yml  env.netbox-plugin.example
deploy/netbox-docker/configuration/: plugins.py
docs/: architecture.md  configuration.md  faq.md  index.md  netbox-plugin.md  release.md  server-install.md  troubleshooting.md
netbox_unifi2netbox/: __init__.py  configuration.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_unifi2netbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
netbox_unifi2netbox/data/: ubiquiti_device_specs.json
netbox_unifi2netbox/management/: __init__.py
netbox_unifi2netbox/management/commands/: __init__.py  (+1 more)
netbox_unifi2netbox/migrations/: 0001_initial.py
netbox_unifi2netbox/services/: __init__.py  auth.py  mapping.py  sync_service.py
netbox_unifi_sync/: __init__.py  configuration.py  forms.py  jobs.py  models.py  navigation.py  urls.py  views.py
netbox_unifi_sync/api/: __init__.py  urls.py
netbox_unifi_sync/management/: __init__.py
netbox_unifi_sync/migrations/: 0001_initial.py  0002_asset_tag_settings.py  0003_globalsyncsettings_netbox_url.py  0004_remove_globalsyncsettings_netbox_url.py  0005_feature_parity.py
netbox_unifi_sync/services/: __init__.py  audit.py  auth.py  orchestrator.py  runtime.py  sync_engine.py  sync_service.py
sync/: ipam.py
tests/: conftest.py  test_asset_tag_patterns.py  test_dhcp_ip_ranges.py  test_ipam_ping.py  test_ipam_static_selection.py  test_log_sanitizer.py  test_netbox_unifi_sync_migration_skeleton.py  test_netbox_unifi_sync_runtime.py  test_netbox_unifi_sync_security.py  test_network_info.py  test_plugin_auth_service.py  test_plugin_configuration.py  test_plugin_mapping.py  test_spec_refresh.py  test_threading_env.py  test_unifi_runtime.py
tests/integration/: test_netbox_plugin_smoke.py
tools/: refresh_unifi_specs.py
unifi/: unifi.py
unifi2netbox/: __init__.py  urls.py
unifi2netbox/services/: sync_engine.py
wiki/: Configuration.md  Home.md  Installation.md  Release-and-PyPI.md  Troubleshooting.md
(+33 files in other folders)
